chaosvpn (2.19+dev-0) UNRELEASED; urgency=medium

  * Development version.

  * Fixes compilation with OpenSSL 1.1.0
  * Changed dependency from "iproute" to "iproute2"

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sun, 23 Oct 2016 15:16:38 +0200

chaosvpn (2.19-0) unstable; urgency=low

  * $use_dynamic_routes: Support compressed IPv6 addresses in
    subnet-up/down shellscript, as used by latest tinc 1.1-git.
  * Replaced central config ecdsapublickey= with ed25519publickey=
    following tinc 1.1-git development.
  * Integrate /etc/tinc/chaos/ed25519_key.pub into generated
    hosts file for own node, because the hosts file is the only
    place that tinc searches for it.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Sun, 23 Oct 2016 14:53:06 +0200

chaosvpn (2.18-0) unstable; urgency=low

  * Include chaosvpn.conf template for OpenBSD.
  * Do not automatically restart tincd if it aborted cleanly with
    a fatal error.
    Can happen for example with config incompatibilities between tinc
    and chaosvpn, or if two instances of the same node are running on
    two different hosts and the conflict-resolution in tinc decided
    to kill one.
  * calcdebversion: Make the version number in "make deb" look nicer.
  * Created test_addrmask.c, a small test program to verify that the
    addressmask parsing and output functions work on a system.
    Use it as 'make test_addrmask && ./test_addrmask'
  * Makefile: Use BSD gcc parameters for all kinds of BSD, not just FreeBSD
  * addrmask_to_string(): use inet_ntop() on unix, and getnameinfo() only on
    win32 - fixes NetBSD support.
  * Added a couple of internal cleanups.

 -- Sven-Haegar Koch <haegar@sdinet.de>  Thu, 01 Aug 2013 19:42:44 +0200

chaosvpn (2.17-0) unstable; urgency=low

  * addrmask_parse(): Fixed IP address parsing under OpenWRT by setting a
    missing ai_socktype for getaddrinfo() calls.
    Thanks to Thorben Went for debugging this.
  * addrmask.c: Fixed compile error on FreeBSD by including missing